<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSBSJU Coffee App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_johnnie_java_home">Johnnie Java</string>
    <string name="johnnie_java_button">Johnnie Java Button!</string>
    <string name="title_activity_clemens_perk_home">Clemens Perk</string>
    <string name="title_activity_menu">Menu</string>
    <string name="hello">hello</string>
    <string name="Home"></string>
    <string name="home">HOME</string>
    <string name="about">ABOUT</string>
    <string name="menu">MENU</string>
    <string name="coffee_button">COFFEE</string>
    <string name="tea_button">TEA</string>
    <string name="espresso_drinks_button">ESPRESSO DRINKS</string>
    <string name="specialty_drinks_button">SPECIALTY DRINKS</string>
    <string name="smoothies_button">SMOOTHIES</string>
    <string name="chillerz_button">CHILLERZ</string>
    <string name="non_espresso_drinks_button">NON-ESPRESSO DRINKS</string>
    <string name="title_activity_coffee">Coffee</string>
    <string name="coffee">COFFEE</string>
    <string name="_12_oz_">"  12 oz:"</string>
    <string name="_1_85_">"$1.85  "</string>
    <string name="title_activity_tea">Tea</string>
    <string name="title_activity_espresso_drinks">EspressoDrinks</string>
    <string name="_1_40_">"$1.40  "</string>
    <string name="_16_oz_">"  16 oz:"</string>
    <string name="_12oz_price">"$1.40  "</string>
    <string name="espresso_drinks">ESPRESSO DRINKS</string>
    <string name="cappuccino">CAPPUCCINO</string>
    <string name="americano">AMERICANO</string>
    <string name="depth_charge">DEPTH CHARGE</string>
    <string name="cold_press">COLD PRESS</string>
    <string name="latte">LATTE</string>
    <string name="mocha">MOCHA</string>
    <string name="title_activity_specialty_drinks">SpecialtyDrinks</string>
    <string name="title_activity_smoothies">Smoothies</string>
    <string name="title_activity_non_espresso_drinks">NonEspressoDrinks</string>
    <string name="title_activity_chillerz">Chillerz</string>
    <string name="title_activity_basic_with_description">BasicWithDescription</string>
    <string name="latte_with_cinnamon_and_honey">Latte with Cinnamon and Honey</string>
    <string name="johnnie_autumn">JOHNNIE AUTUMN</string>
    <string name="specialty_drinks">SPECIALTY DRINKS</string>
    <string name="the_link">THE LINK</string>
    <string name="the_echo">THE ECHO</string>
    <string name="bennie_dream">BENNIE DREAM</string>
    <string name="mocha_love">MOCHA LOVE</string>
    <string name="turtle_mocha">TURTLE MOCHA</string>
    <string name="csb_senate">CSB SENATE</string>
    <string name="andes_mint_extreme">ANDES MINT EXTREME</string>
    <string name="mocha_love_angel">MOCHA LOVE ANGEL</string>
    <string name="chillerz">CHILLERZ</string>
    <string name="white_chocolate">WHITE CHOCOLATE</string>
    <string name="caramel">CARAMEL</string>
    <string name="turtle">TURTLE</string>
    <string name="vanilla">VANILLA</string>
    <string name="heath">HEATH</string>
    <string name="chai">CHAI</string>
    <string name="oreo">OREO</string>
    <string name="smoothies">SMOOTHIES</string>
    <string name="tropical_sunset">TROPICAL SUNSET</string>
    <string name="berrie_bennie">BERRIE BENNIE</string>
    <string name="non_espresso_drinks">NON-ESPRESSO DRINKS</string>
    <string name="chai_tea_latte">CHAI TEA LATTE</string>
    <string name="streamer">STREAMER</string>
    <string name="hot_chocolate">HOT CHOCOLATE</string>
    <string name="apple_cider">APPLE CIDER</string>
    <string name="energery_drink">ENERGERY DRINK</string>
    <string name="bottled_drinks">BOTTLED DRINKS</string>
    <string name="italian_soda">ITALIAN SODA</string>
    <string name="tea">TEA</string>
    <string name="energy_drink">ENERGY DRINK</string>
    <string name="menupage">menuPage</string>
    <string name="title_activity_basic">Basic</string>
    <string name="title_activity_menu_johnnie_java">MenuJohnnieJava</string>
    <string name="title_activity_brew_crew">Brew Crew</string>
    <string name="brew_crew">BREW CREW</string>
    <string name="gm">General Manager\nNihal Bhakta\nClass of 2014</string>
    <string name="mm">Marketing Manager\nKellie Siembieda\nClass of 2014</string>
    <string name="om">Operations Manager\nFabricio Moncada\nClass of 2014</string>
    <string name="fm">Financial Manager\nMax Salerno\nClass of 2014</string>
    <string name="title_activity_daily_offers_clemens_perk">DailyOffersClemensPerk</string>
    <string name="daily_offers_clemens">DAILY OFFERS</string>
    <string name="drink_of_week">Drink of the Week:</string>
    <string name="dow_drink">Drink: Drink Description</string>
    <string name="drink_of_day">Drink of the Day:</string>
    <string name="dod_drink">Drink: Drink Description</string>
    <string name="title_activity_johnnie_java_staff">Johnnie Java Staff</string>
    <string name="jj_staff">JOHNINE JAVA STAFF</string>
    <string name="m1">Staff Member 1\nStaff Description</string>
    <string name="m2">Staff Mmeber 2\nStaff Description</string>
    <string name="title_activity_johnnie_java_offers">Johnnie Java Offers</string>
    <string name="title_activity_clemens_about">ClemensAbout</string>
    <string name="title_activity_johnnie_about">JohnnieAbout</string>
    <string name="earl_grey">Earl Grey</string>
    <string name="pomegrante_green">Pomegrante Green</string>
    <string name="montana_gold">Montana Gold</string>
    <string name="teas">Teas</string>
    <string name="sweet_ginger_green">Sweet Ginger Green</string>
    <string name="hibiscus_punch">Hibiscus Punch</string>
    <string name="syrups">Syrups</string>
    <string name="flavored_syrups">Flavored Syrups</string>
    <string name="sugar_free_syrups">Sugar Free Syrups</string>
    <string name="organic_syrups">Organic Syrups</string>
    <string name="hazelnut">HAZELNUT</string>
    <string name="chocolate">CHOCOLATE</string>
    <string name="raspberry">RASPBERRY</string>
    <string name="drinks">DRINKS</string>
    <string name="title_activity_johnnie_java_basic2">JohnnieJavaBasic2</string>
    <string name="title_activity_johnnie_java_basic_with_description">JohnnieJavaBasicWithDescription</string>
    <string name="title_activity_johnnie_java_chillers2">JohnnieJavaChillers2</string>
    <string name="title_activity_johnnie_java_drinks2">JohnnieJavaDrinks2</string>
    <string name="title_activity_johnnie_java_flavored_syrups2">JohnnieJavaFlavoredSyrups2</string>
    <string name="title_activity_johnnie_java_organic_syrups2">JohnnieJavaOrganicSyrups2</string>
    <string name="title_activity_johnnie_java_smoothies2">JohnnieJavaSmoothies2</string>
    <string name="title_activity_johnnie_java_specialty_drinks2">JohnnieJavaSpecialtyDrinks2</string>
    <string name="title_activity_johnnie_java_sugar_free_syrups2">JohnnieJavaSugarFreeSyrups2</string>
    <string name="title_activity_johnnie_java_syrups2">JohnnieJavaSyrups2</string>
    <string name="title_activity_johnnie_java_teas2">JohnnieJavaTeas2</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_johnnie_java_menu">Johnnie Java</string>
 

</resources>
