<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.campuscoffeeapp.SpecialtyDrinks" >

    <TextView
        android:id="@+id/text_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/specialty_drinks"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#b21b1b"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_latte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_menu"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="johnnieAutumnPage"
        android:text="@string/johnnie_autumn"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_latte"
        android:layout_alignRight="@+id/button_latte"
        android:layout_below="@+id/button_latte"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="bennieDreamPage"
        android:text="@string/bennie_dream"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_description"
        android:layout_alignRight="@+id/button_description"
        android:layout_below="@+id/button_description"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="theLinkPage"
        android:text="@string/the_link"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button02"
        android:layout_alignRight="@+id/Button02"
        android:layout_below="@+id/Button02"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="turtleMochaPage"
        android:text="@string/turtle_mocha"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button03"
        android:layout_alignRight="@+id/Button03"
        android:layout_below="@+id/Button03"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="theEchoPage"
        android:text="@string/the_echo"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button04"
        android:layout_alignRight="@+id/Button04"
        android:layout_below="@+id/Button04"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="CSBSenatePage"
        android:text="@string/csb_senate"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button05"
        android:layout_alignRight="@+id/Button05"
        android:layout_below="@+id/Button05"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="mochaLovePage"
        android:text="@string/mocha_love_angel"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_latte"
        android:layout_alignParentRight="true"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="andesMintExtremePage"
        android:text="@string/andes_mint_extreme"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:gravity="center"
        android:onClick="homePage"
        android:text="@string/home"
        android:textColor="#b21b1b"
        android:textSize="35sp"
        android:textStyle="bold" />

</RelativeLayout>