<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.campuscoffeeapp.Chillerz" >

    <TextView
        android:id="@+id/text_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/chillerz"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#b21b1b"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_latte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_menu"
        android:layout_alignRight="@+id/text_menu"
        android:layout_below="@+id/text_menu"
        android:layout_marginTop="14dp"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="mochaPage"
        android:text="@string/mocha"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_latte"
        android:layout_alignRight="@+id/button_latte"
        android:layout_below="@+id/button_latte"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="whiteChocolatePage"
        android:text="@string/white_chocolate"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_description"
        android:layout_alignRight="@+id/button_description"
        android:layout_below="@+id/button_description"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="caramelPage"
        android:text="@string/caramel"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button02"
        android:layout_alignRight="@+id/Button02"
        android:layout_below="@+id/Button02"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="turtlePage"
        android:text="@string/turtle"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button03"
        android:layout_alignRight="@+id/Button03"
        android:layout_below="@+id/Button03"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="vanillaPage"
        android:text="@string/vanilla"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button04"
        android:layout_alignRight="@+id/Button04"
        android:layout_below="@+id/Button04"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="heathPage"
        android:text="@string/heath"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button05"
        android:layout_alignRight="@+id/Button05"
        android:layout_below="@+id/Button05"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="oreoPage"
        android:text="@string/oreo"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:gravity="center"
        android:onClick="homePage"
        android:text="@string/home"
        android:textColor="#b21b1b"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/button_home"
        android:background="#b21b1b"
        android:gravity="center"
        android:onClick="chaiPage"
        android:text="@string/chai"
        android:textStyle="bold" />

</RelativeLayout>
