<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.campuscoffeeapp.JohnnieJavaTeas" >
<TextView
     android:id="@+id/text_menu"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
     android:gravity="center_horizontal"
     android:text="@string/teas"
     android:textAppearance="?android:attr/textAppearanceLarge"
     android:textColor="@android:color/darker_gray"
     android:textSize="35sp"
     android:textStyle="bold" />

    <Button
        android:id="@+id/button_earlGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_almond"
        android:layout_below="@+id/button_almond"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:onClick="earlGreyPage"
        android:text="@string/earl_grey"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_montanaGold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_earlGrey"
        android:layout_below="@+id/button_earlGrey"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:onClick="montanaGoldPage"
        android:text="@string/montana_gold"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_sweetGingerGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_montanaGold"
        android:layout_below="@+id/button_montanaGold"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:onClick="sweetGingerGreenPage"
        android:text="@string/sweet_ginger_green"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_pomegranteGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_sweetGingerGreen"
        android:layout_below="@+id/button_sweetGingerGreen"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:onClick="pomegranateGreenPage"
        android:text="@string/pomegrante_green"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_pomegranteGreen"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:gravity="center"
        android:onClick="homePage"
        android:text="@string/home"
        android:textColor="@android:color/darker_gray"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_almond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_menu"
        android:layout_below="@+id/text_menu"
        android:layout_marginTop="44dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:onClick="hibiscusPunchPage"
        android:text="@string/hibiscus_punch"
        android:textStyle="bold" />
    
   
 
</RelativeLayout>
