<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.campuscoffeeapp.ClemensPerkBasic" >

    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:gravity="center"
        android:onClick="homePage"
        android:text="@string/home"
        android:textColor="#b21b1b"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_12oz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:background="#b21b1b"
        android:gravity="left|center_vertical"
        android:text="@string/_12_oz_"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_12oz_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_12oz"
        android:layout_alignBottom="@+id/button_12oz"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/button_12oz"
        android:background="#b21b1b"
        android:gravity="right|center_vertical"
        android:text="@string/_1_40_"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_16oz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_12oz"
        android:layout_below="@+id/button_12oz"
        android:background="#b21b1b"
        android:gravity="left|center_vertical"
        android:text="@string/_16_oz_"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_16oz_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_16oz"
        android:layout_alignBottom="@+id/button_16oz"
        android:layout_alignLeft="@+id/button_12oz_price"
        android:layout_alignRight="@+id/button_12oz_price"
        android:background="#b21b1b"
        android:gravity="right|center_vertical"
        android:text="@string/_1_85_"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/black"
        android:gravity="center"
        android:text="@string/coffee"
        android:textColor="#b21b1b"
        android:textSize="35sp"
        android:textStyle="bold" />

</RelativeLayout>